fixes #18 Remove a condição que considerava a solicitação Aprovada, sem aprovação da Diretoria, quando o valor era dentro da alçada do Coordenador

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ com.totvs.tds.ecm.dataservers
 *.war
 *.bkp
 *.cache
+Transferência de Custo entre Obras/workflow/.resources/CASTILHO-DESENVOLVIMENTO.ws.cache
