fixes #19 Altera o Produto de Receitas

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ com.totvs.tds.ecm.dataservers
 *.bkp
 *.cache
 Transferência de Custo entre Obras/workflow/.resources/CASTILHO-DESENVOLVIMENTO.ws.cache
+Transferência de Custo entre Obras/workflow/.resources/CASTILHO-DESENVOLVIMENTO.ws.cache
